--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,6 +72,8 @@ border-radius: 10px;
     position: relative;
     padding-top: 20%;
     padding-bottom: 20%;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: red;
 }
 /*Big header*/
 .intro-message > h1 {
@@ -180,9 +182,11 @@ hr.intro-divider {
 }
 
 h2.section-heading {
-    margin-top: 100px;
+    margin-top: 80px;
     font-size: 3em;
     color: white;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: red;
 }
 
   /*text*/
@@ -219,8 +223,8 @@ section {
 }
 
 #portfolio .portfolio-item {
-  margin: 0 0 15px;
-  right: 0;
+  padding-top: 1%; 
+  height: 400px;
   border: 1px outset rgba(255, 255, 255, 0.6);
 }
 
@@ -279,12 +283,6 @@ section {
   padding: 25px;
 }
 
-#portfolio .portfolio-item .portfolio-caption h4 {
-  color: #fff;
-  text-transform: none;
-  margin: 0;
-}
-
 #portfolio .portfolio-item .portfolio-caption p {
   font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: italic;
@@ -298,7 +296,7 @@ section {
 
 @media (min-width:767px) {
   #portfolio .portfolio-item {
-    margin: 0 0 30px;
+    margin: 0 0 0px;
   }
 }
 
